--- a/index.html
+++ b/index.html
@@ -5,27 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fieldset elements</title>
+    <title>IBM-1st-Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>The fieldset element</h1>
-
-    <form>
+    <h2>Register Form</h2>
+    <form action="register">
         <fieldset form="user_regn" name="user_details">
-            <legend>Presonal Details</legend>
-            <label for="fname">First name:</label>
-            <input type="text" id="fname" name="fname"><br><br>
-            <label for="lname">Last name:</label>
-            <input type="text" id="lname" name="lname"><br><br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email"><br><br>
-            <label for="birthday">Birthday:</label>
-            <input type="date" id="birthday" name="birthday"><br><br>
+            <legend>Personal Information</legend>
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="fname">
+            <br><br>
+            <label for="lname">Last name</label>
+            <input type="tetx" id="lname" name="lname">
+            <br><br>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email">
+            <br><br>
+            <label for="birthday">Birthday</label>
+            <input type="date" id="birthday" name="birthday">
         </fieldset>
-        <input type="submit" value="Submit">
+        <fieldset>
+            <legend> Education Qualification</legend>
+            <label for="university">Highest Degree</label>
+            <input type="text" id="university" name="university">
+            <br><br>
+            <label for="college">College</label>
+            <input type="text" id="college" name="college">
+        </fieldset>
     </form>
+    <input type="submit" value="submit">
+
 
     <script src="script.js"></script>
 
