--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
             <label for="university">Highest Degree</label>
             <input type="text" id="university" name="university">
             <br><br>
-            <label for="college">College</label>
+            <label for="college">College name</label>
             <input type="text" id="college" name="college">
+            <br><br>
+            <label for="university">University</label>
+            <input type="text" id="university" name="university">
         </fieldset>
     </form>
     <input type="submit" value="submit">
