--- a/index.html
+++ b/index.html
@@ -87,6 +87,21 @@
 
             </div>
         </div>
+        <!--Testimonial-->
+        <div class="testimonial-col">
+            <img src="images/p.5.jpeg">
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta facere similique, ut obcaecati
+                    dignissimos voluptatibus odit minima voluptas non aliquam deleniti! Voluptatibus totam nostrum
+                    expedita labore placeat animi odit non?</p>
+                <h3>Abdulhakim Sheikh</h3>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+            </div>
+        </div>
         <div class="testimonial-col">
             <img src="images/p.5.jpeg">
             <div>
@@ -102,6 +117,27 @@
             </div>
         </div>
     </div>
+</section>
+<!--Call to Action-->
+<section class="cta">
+    <h1>Enrol For Our various online courses<br>Anywhere From The World</h1>
+    <a href="" class="hero-btn">CONTACT US</a>
+</section>
+<!--footer-->
+<section class="footer">
+    <h4>ABOUT US</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum velit culpa fugiat possimus, <br>quisquam iusto
+        excepturi libero? Nemo, error necessitatibus? Odio eius error, quia nesciunt repellat unde? Esse, repellat
+        asperiores?</p>
+    <div class="icons">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-whatsapp"></i>
+        <i class="fas fa-tiktok"></i>
+    </div>
+    <p>Made with<i class="fas fa-heart"></i> by Sufi Academy</p>
 </section>
 
 <script>
